tree-sitter-asciidoc/grammar.js
const {
  commaSep,
  escaped_ch,
  anySep1,
  anySep,
} = require('../common/common.js');
const lists = require('./common/lists.js');
const title = require('./common/document_title.js');
const table = require('./common/table.js');

module.exports = grammar({
  name: 'asciidoc',

  extras: $ => [$._NEWLINE],

  conflicts: $ => [[$._value_run], [$._value_run_eq]],

  rules: {
    document: $ => repeat($.block_element),
    ...lists.rules,
    ...title.rules,
    ...table.rules,
    block_element: $ =>
      prec.left(
        seq(
          choice(
            $.document_title,
            $.document_attr,
            alias($._section1, $.section),
            alias($._doc_block, $.section_block),
            $.line_comment,
            $.block_comment,
          ),
        ),
      ),

    // Document-level sections nest by heading level: a level-1 section (`==`)
    // contains its content plus any deeper sections, and each level closes
    // when a heading of the same or higher level appears.  The heading node
    // (`title1`..`title5`) is kept as-is inside the wrapping `section`.
    // A section body allows content blocks plus any *deeper* section, so an
    // illegal level skip (e.g. `==` straight to `====`) still nests instead of
    // erroring; the innermost open section greedily claims a deeper heading.
    _section1: $ =>
      prec.right(
        seq(
          repeat(choice($.element_attr, $.block_title)),
          $.title1,
          repeat(
            choice(
              $._section_comment,
              alias($._doc_block, $.section_block),
              alias($._section2, $.section),
              alias($._section3, $.section),
              alias($._section4, $.section),
              alias($._section5, $.section),
            ),
          ),
        ),
      ),
    _section2: $ =>
      prec.right(
        seq(
          repeat(choice($.element_attr, $.block_title)),
          $.title2,
          repeat(
            choice(
              $._section_comment,
              alias($._doc_block, $.section_block),
              alias($._section3, $.section),
              alias($._section4, $.section),
              alias($._section5, $.section),
            ),
          ),
        ),
      ),
    _section3: $ =>
      prec.right(
        seq(
          repeat(choice($.element_attr, $.block_title)),
          $.title3,
          repeat(
            choice(
              $._section_comment,
              alias($._doc_block, $.section_block),
              alias($._section4, $.section),
              alias($._section5, $.section),
            ),
          ),
        ),
      ),
    _section4: $ =>
      prec.right(
        seq(
          repeat(choice($.element_attr, $.block_title)),
          $.title4,
          repeat(
            choice(
              $._section_comment,
              alias($._doc_block, $.section_block),
              alias($._section5, $.section),
            ),
          ),
        ),
      ),
    _section5: $ =>
      prec.right(
        seq(
          repeat(choice($.element_attr, $.block_title)),
          $.title5,
          repeat(choice($._section_comment, alias($._doc_block, $.section_block))),
        ),
      ),

    _section_comment: $ => choice($.line_comment, $.block_comment),

    // A document-level content block (no section heading).
    _doc_block: $ =>
      seq(repeat(choice($.element_attr, $.block_title)), choice($.paragraph, $._block)),

    // Container blocks (delimited/open/sidebar/quote/table cells) keep the flat
    // `section_block`, which may still hold a (discrete) heading.
    section_block: $ =>
      choice($._section_block_para, $._section_block, $._section_comment),
    _section_block_para: $ =>
      seq(repeat(choice($.element_attr, $.block_title)), $.paragraph),
    _section_block: $ =>
      seq(
        repeat(choice($.element_attr, $.block_title)),
        choice($.title1, $.title2, $.title3, $.title4, $.title5, $._block),
      ),
    _block: $ =>
      choice(
        $.list,
        $.description_list,
        $.table_block,
        $.csv_table_block,
        $.dsv_table_block,
        $.delimited_block,
        $.listing_block,
        $.literal_block,
        $.ident_block,
        $.open_block,
        $.breaks,
        $.admonition,
        $.quoted_block,
        $.quoted_md_block,
        $.passthrough_block,
        $.sidebar_block,
        $.block_macro,
      ),
    // Description (labeled) lists: `term:: definition`.  The marker
    // (`::`/`:::`/`::::`/`;;`, always followed by whitespace or a line
    // break) is supplied by the external scanner; the term is the run of
    // text before it.  An item may carry its definition inline or leave it
    // to the following block (term-only form).
    description_list: $ => prec.right(repeat1($.description_list_item)),
    description_list_item: $ =>
      prec.right(
        seq(
          $.term,
          $.description_marker,
          optional($.line),
        ),
      ),

    title1: $ => seq($.title_h1_marker, $._WHITE_SPACE, $.line),
    title2: $ => seq($.title_h2_marker, $._WHITE_SPACE, $.line),
    title3: $ => seq($.title_h3_marker, $._WHITE_SPACE, $.line),
    title4: $ => seq($.title_h4_marker, $._WHITE_SPACE, $.line),
    title5: $ => seq($.title_h5_marker, $._WHITE_SPACE, $.line),
    breaks: $ => seq($.breaks_marker, $._block_end),

    admonition: $ =>
      seq(
        choice(
          $.admonition_note,
          $.admonition_tip,
          $.admonition_important,
          $.admonition_caution,
          $.admonition_warning,
        ),
        ':',
        token.immediate(' '),
        $.line,
      ),
    block_macro: $ =>
      seq(
        $.block_macro_name,
        '::',
        alias(repeat(escaped_ch('[')), $.target),
        '[',
        commaSep($.block_macro_attr),
        ']',
        $._block_end,
      ),
    block_macro_attr: $ =>
      seq($.attribute_name, optional(seq('=', $.attribute_value))),
    attribute_name: $ => repeat1(escaped_ch('=')),
    attribute_value: $ => repeat1(escaped_ch(']')),

    escaped_line: $ =>
      repeat1(choice(/[^/\n]/, /\/[^*]/, /\\\r?\n/, seq($.hard_wrap))),
    hard_wrap: $ => ' +',
    // A block attribute list, e.g. `[source#id.role%opt,ruby,cols="1,2"]`.
    // The first entry is the positional "style" slot and may carry the id
    // (`#`), role (`.`) and option (`%`) shorthand; later entries are plain
    // positional values or `name=value` pairs.  Commas separate entries
    // except inside a quoted value.
    element_attr: $ =>
      seq(
        $.element_attr_marker,
        optional($._WHITE_SPACE),
        optional(seq($._lead_attr, optional($._WHITE_SPACE))),
        repeat(
          seq(',', optional($._WHITE_SPACE), optional(seq($._attr, optional($._WHITE_SPACE)))),
        ),
        alias(']', $.element_attr_marker),
        $._NEWLINE,
      ),
    _lead_attr: $ =>
      choice($.named_attr, alias($._lead_positional, $.positional_attr)),
    _attr: $ => choice($.named_attr, $.positional_attr),
    _lead_positional: $ =>
      choice(
        seq(alias($._attr_word, $.block_style), repeat($._shorthand)),
        repeat1($._shorthand),
      ),
    _shorthand: $ =>
      choice(
        seq('#', alias($._attr_word, $.id)),
        seq('.', alias($._attr_word, $.role)),
        seq('%', alias($._attr_word, $.option)),
      ),
    named_attr: $ =>
      seq(
        alias($._attr_word, $.attribute_name),
        '=',
        optional(alias($._named_value, $.attribute_value)),
      ),
    // A named value may be quoted (allowing commas inside) or bare.  A bare
    // value, unlike a positional, may contain `=` (e.g. a URL query string).
    _named_value: $ =>
      choice(
        seq('"', optional(alias(repeat(escaped_ch('"', true)), $.value)), '"'),
        seq("'", optional(alias(repeat(escaped_ch("'", true)), $.value)), "'"),
        alias($._value_run_eq, $.value),
      ),
    positional_attr: $ => $._value_run,
    // A value never starts or ends with whitespace (the run after a comma is the
    // separator, and a trailing run is consumed before `]`), but interior
    // spaces are allowed, as in `quote,Monty Python`.
    _value_run: $ =>
      seq($._value_token, repeat(seq(optional($._WHITE_SPACE), $._value_token))),
    _value_run_eq: $ =>
      seq($._value_token_eq, repeat(seq(optional($._WHITE_SPACE), $._value_token_eq))),
    _value_token: $ => choice($._attr_word, '#', '.', '%'),
    _value_token_eq: $ => choice($._attr_word, '#', '.', '%', '='),
    _attr_word: _ => token(/[^,=#.%\]"'\s]+/),
    block_title: $ => seq($.block_title_marker, $.line),

    delimited_block: $ =>
      prec.left(
        seq(
          $.delimited_block_start_marker,
          repeat($.section_block),
          $.delimited_block_end_marker,
        ),
      ),
    open_block: $ =>
      prec.left(
        seq($.open_block_marker, repeat($.section_block), $.open_block_marker),
      ),
    sidebar_block: $ =>
      prec.left(
        seq(
          $.sidebar_block_start_marker,
          repeat($.section_block),
          $.sidebar_block_end_marker,
        ),
      ),
    passthrough_block: $ =>
      seq(
        $.passthrough_block_marker,
        alias(repeat(seq(/[^\r\n]*/, $._NEWLINE)), $.listing_block_body),
        $.passthrough_block_marker,
      ),
    listing_block: $ =>
      prec.left(
        seq(
          $.listing_block_start_marker,
          alias(
            repeat(
              choice(
                seq(repeat1(choice(/[^\r\n]/, $.callout_marker)), $._block_end),
                $.block_macro,
              ),
            ),
            $.listing_block_body,
          ),
          $.listing_block_end_marker,
          optional($.callout_list),
        ),
      ),
    literal_block: $ =>
      prec.left(
        seq(
          $.literal_block_marker,
          alias(
            repeat(
              choice(
                seq(repeat1(choice(/[^\r\n]/, $.callout_marker)), $._block_end),
                $.block_macro,
              ),
            ),
            $.literal_block_body,
          ),
          $.literal_block_marker,
          optional($.callout_list),
        ),
      ),
    ident_block: $ =>
      prec.left(seq(repeat1($.ident_block_line), optional($.callout_list))),
    ident_block_line: $ =>
      seq(
        $.ident_marker,
        repeat1(choice(/[^\r\n]/, $.callout_marker)),
        $._block_end,
      ),

    line: $ => seq(/[^\r\n]+/, $._block_end),
    paragraph: $ =>
      prec.left(prec(-1, seq(repeat1($.line), optional($.quoted_line)))),
    quoted_line: $ =>
      seq($.quoted_paragraph_marker, token.immediate(' '), $.line),

    line_comment: $ =>
      seq(
        $.line_comment_marker,
        optional(alias(/[^\r\n]+/, $.body)),
        $._block_end,
      ),
    block_comment: $ =>
      seq(
        $.block_comment_start_marker,
        alias(repeat(seq(/[^\r\n]+/, $._NEWLINE)), $.body),
        $.block_comment_end_marker,
      ),

    quoted_block: $ =>
      prec.left(
        seq(
          $.quoted_block_start_marker,
          repeat(choice($.line, $.quoted_block)),
          $.quoted_block_end_marker,
        ),
      ),
    quoted_md_block: $ =>
      prec.right(
        repeat1(
          choice(
            seq($.quoted_block_md_marker, $._NEWLINE),
            seq($.quoted_block_md_marker, token.immediate(' '), $.line),
          ),
        ),
      ),

    _block_end: $ => choice($._NEWLINE, $._eof),
    _NEWLINE: _ => /\r?\n/,
    _WHITE_SPACE: $ => /[ \t]+/,
  },

  externals: $ => [
    $._eof,
    $.title_h0_marker,
    $.title_h1_marker,
    $.title_h2_marker,
    $.title_h3_marker,
    $.title_h4_marker,
    $.title_h5_marker,
    $.list_marker_star,
    $.list_marker_hyphen,
    $.list_marker_dot,
    $.list_marker_digit,
    $.list_marker_geek,
    $.list_marker_alpha,
    $.document_attr_marker,
    $.element_attr_marker,
    $.block_title_marker,
    $.breaks_marker,
    $.table_block_marker,
    $.ntable_block_marker,
    $.table_cell_attr,
    $.delimited_block_start_marker,
    $.delimited_block_end_marker,
    $.listing_block_start_marker,
    $.listing_block_end_marker,
    $.literal_block_marker,
    $.quoted_block_start_marker,
    $.quoted_block_end_marker,
    $.quoted_block_md_marker,
    $.quoted_paragraph_marker,
    $.open_block_marker,
    $.passthrough_block_marker,
    $.block_macro_name,
    $.callout_marker,
    $.callout_list_marker,
    $.line_comment_marker,
    $.block_comment_start_marker,
    $.block_comment_end_marker,
    $.admonition_note,
    $.admonition_tip,
    $.admonition_important,
    $.admonition_caution,
    $.admonition_warning,
    $.ident_marker,
    $.list_continuation,
    $.sidebar_block_start_marker,
    $.sidebar_block_end_marker,
    $.csv_table_block_marker,
    $.dsv_table_block_marker,
    $.term,
    $.description_marker,
  ],
});
